Initial commit. PWA and firebase init

--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,3 +1,4 @@
+
 {
   "index": "/index.html",
   "assetGroups": [{
@@ -5,7 +6,6 @@
     "installMode": "prefetch",
     "resources": {
       "files": [
-        "/favicon.ico",
         "/index.html"
       ],
       "versionedFiles": [
@@ -22,6 +22,31 @@
       "files": [
         "/assets/**"
       ]
+    }
+  }],
+  "dataGroups": [{
+    "name": "api-freshness",
+    "urls": [
+      "/new"
+    ],
+    "cacheConfig": {
+      "maxSize": 100,
+      "maxAge": "1h",
+      "timeout": "10s",
+      "strategy": "freshness"
+    }
+  }, {
+    "name": "api-performance",
+    "urls": [
+      "/",
+      "/jobs",
+      "/show",
+      "/ask"
+    ],
+    "cacheConfig": {
+      "maxSize": 100,
+      "maxAge": "1d",
+      "strategy": "performance"
     }
   }]
 }
