--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "@angular/service-worker": "^5.2.0",
     "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "firebase": "^4.12.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
