--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
+    "@angular/cli": "~1.7.3",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -28,7 +31,8 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "firebase": "^4.12.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.6",,
+    "typescript": "~2.5.3"
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
