--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "firebase": "^4.12.1",
-    "rxjs": "^5.5.6",,
-    "typescript": "~2.5.3"
+    "rxjs": "^5.5.6",
+    "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
