--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
     "@angular/cli": "~1.7.3",
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
@@ -27,10 +27,12 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@angular/service-worker": "^5.2.0",
+    "angular2-markdown": "^2.2.3",
     "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "firebase": "^4.12.1",
+    "npm": "^5.8.0",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
