--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.16.2",
     "firebase": "^4.12.1",
     "npm": "^5.8.0",
+    "reset-css": "^3.0.0",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
