--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SA",
-  "name": "Sfeir'Athlon PWA",
+  "short_name": "Sfeir'Athlon",
+  "name": "Sfeir'Athlon",
   "start_url": "/",
 
   "theme_color": "#f48c5b",
