--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "core-js": "^2.5.5",
     "express": "^4.16.2",
     "firebase": "^4.13.1",
+    "localforage": "^1.7.1",
+    "ngforage": "^2.0.4",
+    "ngx-localforage": "^0.1.35",
     "ngx-markdown": "^1.5.2",
     "ngx-showdown": "^4.0.1",
     "npm": "^5.8.0",
