--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
     "@angular/service-worker": "^5.2.10",
+    "@fortawesome/angular-fontawesome": "0.1.0-9",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-11",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-8",
+    "@types/lodash": "^4.14.109",
     "angular2-markdown": "^2.2.3",
     "angularfire2": "^5.0.0-rc.5-next",
     "core-js": "^2.5.5",
