--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,13 +11,18 @@
 
   "icons": [
     {
-      "src": "images/icons/android-chrome-192x192.png",
+      "src": "images/icons/©192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
       "src": "images/icons/android-chrome-384x384.png",
       "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/android-chrome-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     },
     {
