refresh new with alert. beforeinstallprompt

--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,9 +1,11 @@
 
 {
+  "configVersion": 2,
   "index": "/index.html",
   "assetGroups": [{
     "name": "app",
     "installMode": "prefetch",
+    "updateMode": "prefetch",
     "resources": {
       "files": [
         "/index.html"
