Mis en place de ChartJS

--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@types/lodash": "^4.14.109",
     "angular2-markdown": "^2.2.3",
     "angularfire2": "^5.0.0-rc.5-next",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.5",
     "express": "^4.16.2",
     "firebase": "^4.12.1",
+    "ng2-charts": "^1.6.0",
     "npm": "^5.8.0",
     "reset-css": "^3.0.0",
     "rxjs": "^5.5.10",
