--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           version: 9.x
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Build Application
         run: npm run dist
       - name: Deploy Firebase Host
