--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: npm i
       - name: Build Application
-        run: ng build --prod --aot
+        run: npm run build
       - name: Deploy Firebase Host
         uses: pizzafox/firebase-action@master
         env:
