updated angular to version 8 and other dependencies.

--- a/package.json
+++ b/package.json
@@ -12,59 +12,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.10",
-    "@angular/cdk": "^5.2.5",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/flex-layout": "^2.0.0-beta.10-4905443",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/material": "^5.2.5",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
-    "@angular/service-worker": "^5.2.10",
-    "@fortawesome/angular-fontawesome": "0.1.0-9",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-11",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-8",
-    "@types/lodash": "^4.14.109",
-    "angular2-markdown": "^2.2.3",
-    "angularfire2": "^5.0.0-rc.5-next",
-    "chart.js": "^2.7.3",
+    "@angular/animations": "^8.2.10",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.10",
+    "@angular/compiler": "^8.2.10",
+    "@angular/core": "^8.2.10",
+    "@angular/fire": "^5.2.1",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "^8.2.10",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.10",
+    "@angular/platform-browser-dynamic": "^8.2.10",
+    "@angular/router": "^8.2.10",
+    "@angular/service-worker": "^8.2.10",
+    "@fortawesome/angular-fontawesome": "0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@types/lodash": "^4.14.144",
+    "chart.js": "^2.8.0",
     "chartjs-plugin-datalabels": "^0.4.0",
-    "core-js": "^2.5.5",
-    "express": "^4.16.2",
-    "firebase": "^4.12.1",
+    "core-js": "^2.6.9",
+    "express": "^4.17.1",
+    "firebase": "^6.6.2",
     "ng2-charts": "^1.6.0",
-    "npm": "^5.8.0",
+    "ngx-md": "^8.0.0",
+    "npm": "^6.12.0",
     "reset-css": "^3.0.0",
-    "rxjs": "^5.5.10",
-    "typescript": "~2.5.3",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.5.3",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/language-service": "^5.2.10",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.106",
-    "codelyzer": "^4.3.0",
+    "@angular-devkit/build-angular": "~0.803.9",
+    "@angular/cli": "^8.3.9",
+    "@angular/compiler-cli": "^8.2.10",
+    "@angular/language-service": "^8.2.10",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^6.14.7",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^4.3.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^6.0.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "^3.5.3"
   },
   "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "node": ">= 10.15.3",
+    "npm": ">= 6.12.0"
   }
 }
